<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/icon_app_trx_home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/icon_app"
            android:src="@drawable/pp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bank_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Bank"
            android:textColor="@color/black"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/icon_app_trx_home"
            card_view:layout_constraintTop_toTopOf="@+id/icon_app_trx_home" />

        <TextView
            android:id="@+id/date_trx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/date"
            android:textAlignment="textEnd"
            card_view:layout_constraintStart_toStartOf="@+id/bank_home"
            card_view:layout_constraintTop_toBottomOf="@+id/bank_home" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/status_card"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_marginEnd="4dp"
            android:backgroundTint="#4CAF50"
            android:visibility="visible"
            card_view:cardCornerRadius="10dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/bank_home">

            <TextView
                android:textColor="@color/white"
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="7dp"
                android:gravity="center"
                android:text="@string/online"
                android:textSize="11sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/nominal_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/nominal"
            android:textAlignment="textEnd"
            android:textColor="#4CAF50"
            card_view:layout_constraintEnd_toEndOf="@+id/status_card"
            card_view:layout_constraintTop_toBottomOf="@+id/status_card" />


        <TextView
            android:id="@+id/desc_trx"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:text="@string/lorem"
            card_view:layout_constraintEnd_toEndOf="@+id/nominal_home"
            card_view:layout_constraintStart_toStartOf="@+id/date_trx"
            card_view:layout_constraintTop_toBottomOf="@+id/date_trx" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>