<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/bg_hederauth"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/hello"
            android:textColor="@color/white"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/txt_logo_formlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moneytoring_dolar"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_baseline_person_outline_24"

        startIconTintOnFocus="@id/inputemail"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/bgheader"
        app:boxStrokeWidth="2dp"
        android:layout_margin="22dp"
        android:layout_marginTop="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_logo_formlogin"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputname"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"

        startIconTintOnFocus="@id/inputemail"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/bgheader"
        app:boxStrokeWidth="2dp"
        android:layout_margin="22dp"
        android:layout_marginTop="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputemail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
        app:startIconTint="@color/black"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/bgheader"
        app:boxStrokeWidth="2dp"
        android:layout_margin="22dp"
        android:layout_marginTop="22dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:endIconMode="password_toggle"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputpassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
        app:startIconTint="@color/black"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/bgheader"
        app:boxStrokeWidth="2dp"
        android:layout_margin="22dp"
        android:layout_marginTop="22dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/password_Retype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/retype_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputpasswordretype"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/request_signup"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_Retype" />



    <LinearLayout
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_signup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            >
        </TextView>
        <TextView
            android:id="@+id/to_login_page"
            android:layout_marginStart="10dp"
            android:textColor="@color/bg_pemasukan"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            >
        </TextView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>