<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bg_hederauth"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/welcome"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/txt_logo_formlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moneytoring_dolar"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"

        startIconTintOnFocus="@id/inputemail"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/bgheader"
        app:boxStrokeWidth="2dp"
        android:layout_margin="22dp"
        android:layout_marginTop="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_logo_formlogin"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputemail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
        app:startIconTint="@color/black"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/bgheader"
        app:boxStrokeWidth="2dp"
        android:layout_margin="22dp"
        android:layout_marginTop="22dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:endIconMode="password_toggle"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputpassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textColor="@color/bg_pemasukan"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:textAlignment="textEnd"
        android:id="@+id/to_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/request_sign"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_forgot_pass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleSignInBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_sign"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#08000000"
        android:paddingTop="5dp"
        android:stateListAnimator="@null"
        android:text="Sign In With Google"
        android:textAllCaps="false"
        android:textColor="#606060"
        android:textSize="15sp"
        app:cornerRadius="13dp"
        app:icon="@drawable/googleg_standard_color_18"
        app:iconPadding="10dp"
        app:iconTint="#00100D0D"
        app:iconTintMode="src_atop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/googleSignInBtn"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleSignInBtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Belum memiliki akun?"
            android:textColor="#777777" />

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:text="Sign Up"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>